added classes and grid

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </svg>
     <div class="c-app">
       <div class="c-app__logo">
-        <h1>IMPEKABLE</h1>
+        <logo>IMPEKABLE</logo>
       </div>
       <div class="c-app__topbar"></div>
       <div class="c-app__sidebar">
